tests/golden/parse_errors/struct_trailing_comma.cd
struct Person { name: number }
print Person { name: 1, };
