tests/golden/parse_errors/struct_trailing_comma.err
Parse error at 2:25: expected struct field name, found RightBrace `}`
  print Person { name: 1, };
                          ^
Parse error at 2:26: expected expression
  print Person { name: 1, };
                           ^
